--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'kishore '
+description: 'kishore tsc test'
+author: 'kishore'
 inputs:
   milliseconds: # change this
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'time to wait in ms'
+    default: '1000'
 runs:
   using: 'node16'
   main: 'dist/index.js'
